--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
@@ -23,6 +23,7 @@
             }
         </tbody>
     </table>
+    <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
 
 <div>
@@ -36,4 +37,5 @@
             </tr>
         }
     </table>
+    <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
