--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
@@ -46,6 +46,7 @@
             }
         </tbody>
     </table>
+    <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
 
 @using static Persona4GoldenHelper.Data.Enums
