--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
@@ -10,7 +10,7 @@
     {
         var answers = GetAnswersByMonth(month);
         <div>
-            <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">@month</h3>
+            <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12 sub-header">@month</h3>
             <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                 <thead>
                     <tr>
@@ -32,6 +32,7 @@
             </table>
         </div>
     }
+    <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
 
 @functions {
