--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
@@ -19,4 +19,5 @@
             }
         </tbody>
     </table>
+    <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
