--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
@@ -38,6 +38,7 @@
             }
         </tbody>
     </table>
+    <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
 
 @functions {
@@ -55,7 +56,7 @@
 
         if (cost[cost.Length - 2] == 'H')
         {
-            return "cost-hp";        
+            return "cost-hp";
         }
 
         return "";
