--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model SourceListingViewModel
-
-<h2 class="text-align-center">About</h2>
+﻿<h2 class="text-align-center">About</h2>
 <div class="text-align-center col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
     <p>Persona 4 Golden Helper is a personal project to bring all the important info to one place. The site is an ongoing project (Thus the grayed out nav bar pages) the site is also open source (Link in the nav bar to the far right), if you find any issues with the site please report them on the GitHub repo.</p>
     <br />
@@ -15,17 +13,6 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var source in Model.Sources)
-        {
-            <tr>
-                <td>@source.Information</td>
-                <td>
-                    @foreach (var link in source.Links)
-                    {
-                        <a href="@link.URL" class="padding-right" style="white-space:nowrap">@link.URL</a>
-                    }
-                </td>
-            </tr>
-        }
+        
     </tbody>
 </table>
