--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
@@ -8,11 +8,72 @@
 <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
     <thead>
         <tr>
-            <th class="wide-column">Information</th>
-            <th>Link</th>
+            <th>Information</th>
+            <th>Link(s)</th>
         </tr>
     </thead>
     <tbody>
-        
+        <tr>
+            <td>Personas</td>
+            <td>
+                <a href="https://megamitensei.fandom.com/wiki/List_of_Persona_4_Personas">Megami Tensei Wiki</a>
+                <br />
+                <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Personas">IGN Wiki</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Persona Recipe Calculator</td>
+            <td>
+                <a href="https://github.com/arantius/persona-fusion-calculator">Persona 4 Fusion Calculator</a>
+                <br />
+                <a href="http://persona4.wikidot.com/fusiontutor">Persona 4 Wiki - Fusion Theory</a>
+                <br />
+                <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/map/8037-fusion-chart">Game FAQs</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Skills</td>
+            <td>
+                <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Skill_List">IGN Wiki</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Books</td>
+            <td>
+                <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/faqs/65714">Game FAQs</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Exam Answers</td>
+            <td>
+                <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/faqs/65427">Game FAQs</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Quests</td>
+            <td>
+                <a href="https://gamefaqs.gamespot.com/vita/641695-persona-4-golden/faqs/68730">Game FAQs</a>
+                <br />
+                <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Quests">IGN Wiki</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Shadows</td>
+            <td>
+                <a href="https://megamitensei.fandom.com/wiki/Category:Persona_4_Golden_Shadows">Magami Tensei Wiki</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Lunches</td>
+            <td>
+                <a href="https://uk.ign.com/wikis/shin-megami-tensei-persona-4-golden/Boxed_Lunches">IGN Wiki</a>
+            </td>
+        <tr>
+            <td>Skill Cards</td>
+            <td>
+                <a href="https://docs.google.com/file/d/0BwDCz_Mqaf8RTmJac1hMS1dQOUU/edit?pli=1">Google Docs</a>
+            </td>
+        </tr>
+        </tr>
     </tbody>
 </table>
