Fix bug that was causing the 'see more' button to cover persona recipes in mobile mode, also stopped side scrolling on tables

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
@@ -107,7 +107,7 @@
             <tbody>
             </tbody>
         </table>
-        <h4 id="see-more-recipes" class="col-md-12 text-align-center button" onclick="populateRecipeTable()">See More</h4>
+        <h4 id="see-more-recipes" class="col-md-12 col-sm-12 col-xs-12 text-align-center button" onclick="populateRecipeTable()">See More</h4>
     </div>
 </div>
 
