--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -86,6 +86,7 @@
 
 table {
     padding: 0 !important; /* this was causing 2 big padding areas at either side of each tr */
+    overflow: hidden;
 }
 
 /* Site wide tag styling */
