Apply a border radius to the persona recipe scroll

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
@@ -96,18 +96,20 @@
 
 <div>
     <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Recipes (<span id="recipe-count" class="text-dark">?</span>)</h3>
-    <div id="recipe-scroll" class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-        <table id="recipe-table" class="col-md-12 col-sm-12 col-xs-12">
-            <thead>
-                <tr>
-                    <th class="slim-column text-align-center">Cost</th>
-                    <th>Ingredients</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-        <h4 id="see-more-recipes" class="col-md-12 col-sm-12 col-xs-12 text-align-center button" onclick="populateRecipeTable()">See More</h4>
+    <div id="recipe-scroll-container" class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+        <div id="recipe-scroll">
+            <table id="recipe-table">
+                <thead>
+                    <tr>
+                        <th class="slim-column text-align-center">Cost</th>
+                        <th>Ingredients</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <h4 id="see-more-recipes" class="col-md-12 col-sm-12 col-xs-12 text-align-center button" onclick="populateRecipeTable()">See More</h4>
+        </div>
     </div>
 </div>
 
