Add Armor, Accessories, and Weapons source to index view

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
@@ -74,6 +74,11 @@
                 <a href="https://docs.google.com/file/d/0BwDCz_Mqaf8RTmJac1hMS1dQOUU/edit?pli=1">Google Docs</a>
             </td>
         </tr>
+        <tr>
+            <td>Armor, Accessories, and Weapons</td>
+            <td>
+                <a href="https://megamitensei.fandom.com/wiki/List_of_Persona_4_Items">Magami Tensei Wiki</a>
+            </td>
         </tr>
     </tbody>
 </table>
