--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Persona4GoldenHelper | @ViewBag.Title</title>
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
