Add narrower persona stat table headers for mobile
This is becuase with the full stat names, they making the table wider than 10 bootstrap cells

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
@@ -19,11 +19,16 @@
     <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
-                <th class="text-align-center slim-column">Strength</th>
-                <th class="text-align-center slim-column">Magic</th>
-                <th class="text-align-center slim-column">Endurance</th>
-                <th class="text-align-center slim-column">Agility</th>
-                <th class="text-align-center slim-column">Luck</th>
+                <th class="text-align-center slim-column mobile-hidden">Strength</th>
+                <th class="text-align-center slim-column mobile-hidden">Magic</th>
+                <th class="text-align-center slim-column mobile-hidden">Endurance</th>
+                <th class="text-align-center slim-column mobile-hidden">Agility</th>
+                <th class="text-align-center slim-column mobile-hidden">Luck</th>
+                <th class="text-align-center slim-column desktop-hidden">St</th>
+                <th class="text-align-center slim-column desktop-hidden">Ma</th>
+                <th class="text-align-center slim-column desktop-hidden">En</th>
+                <th class="text-align-center slim-column desktop-hidden">Ag</th>
+                <th class="text-align-center slim-column desktop-hidden">Lu</th>
             </tr>
         </thead>
         <tbody>
