Seperate style sheet into colour and styles
This is to easily change between dark and light theme

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
@@ -34,13 +34,13 @@
                     <td class="text-align-center mobile-hidden">@persona.Stats.Endurance</td>
                     <td class="text-align-center mobile-hidden">@persona.Stats.Agility</td>
                     <td class="text-align-center mobile-hidden">@persona.Stats.Luck</td>
-                    <td class="text-align-center mobile-hidden affinity-@persona.Elements.Physical">@ConvertElementAffinityToShortHand(persona.Elements.Physical)</td>
-                    <td class="text-align-center mobile-hidden affinity-@persona.Elements.Fire">@ConvertElementAffinityToShortHand(persona.Elements.Fire)</td>
-                    <td class="text-align-center mobile-hidden affinity-@persona.Elements.Ice">@ConvertElementAffinityToShortHand(persona.Elements.Ice)</td>
-                    <td class="text-align-center mobile-hidden affinity-@persona.Elements.Electricity">@ConvertElementAffinityToShortHand(persona.Elements.Electricity)</td>
-                    <td class="text-align-center mobile-hidden affinity-@persona.Elements.Wind">@ConvertElementAffinityToShortHand(persona.Elements.Wind)</td>
-                    <td class="text-align-center mobile-hidden affinity-@persona.Elements.Light">@ConvertElementAffinityToShortHand(persona.Elements.Light)</td>
-                    <td class="text-align-center mobile-hidden affinity-@persona.Elements.Darkness">@ConvertElementAffinityToShortHand(persona.Elements.Darkness)</td>
+                    <td class="text-align-center mobile-hidden font-bold affinity-@persona.Elements.Physical">@ConvertElementAffinityToShortHand(persona.Elements.Physical)</td>
+                    <td class="text-align-center mobile-hidden font-bold affinity-@persona.Elements.Fire">@ConvertElementAffinityToShortHand(persona.Elements.Fire)</td>
+                    <td class="text-align-center mobile-hidden font-bold affinity-@persona.Elements.Ice">@ConvertElementAffinityToShortHand(persona.Elements.Ice)</td>
+                    <td class="text-align-center mobile-hidden font-bold affinity-@persona.Elements.Electricity">@ConvertElementAffinityToShortHand(persona.Elements.Electricity)</td>
+                    <td class="text-align-center mobile-hidden font-bold affinity-@persona.Elements.Wind">@ConvertElementAffinityToShortHand(persona.Elements.Wind)</td>
+                    <td class="text-align-center mobile-hidden font-bold affinity-@persona.Elements.Light">@ConvertElementAffinityToShortHand(persona.Elements.Light)</td>
+                    <td class="text-align-center mobile-hidden font-bold affinity-@persona.Elements.Darkness">@ConvertElementAffinityToShortHand(persona.Elements.Darkness)</td>
                 </tr>
 
             }
