--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
@@ -17,7 +17,7 @@
                 <tr>
                     <td class="text-bright">@skill.Name</td>
                     <td>@skill.Effect</td>
-                    <td class="text-align-center @CalculateCostType(skill.Cost)">@(skill.Cost != "" ? skill.Cost : "-")</td>
+                    <td class="text-align-center font-bold @CalculateCostType(skill.Cost)">@(skill.Cost != "" ? skill.Cost : "-")</td>
                     <td class="mobile-hidden">
                         @for (var i = 0; i < skill.Personas.Count(); i++)
                         {
