--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
@@ -48,13 +48,13 @@
                         <td class="text-align-center mobile-hidden">@shadow.Stats.Endurance</td>
                         <td class="text-align-center mobile-hidden">@shadow.Stats.Agility</td>
                         <td class="text-align-center mobile-hidden">@shadow.Stats.Luck</td>
-                        <td class="text-align-center mobile-hidden affinity-@shadow.Elements.Physical">@ConvertElementAffinityToShortHand(shadow.Elements.Physical)</td>
-                        <td class="text-align-center mobile-hidden affinity-@shadow.Elements.Fire">@ConvertElementAffinityToShortHand(shadow.Elements.Fire)</td>
-                        <td class="text-align-center mobile-hidden affinity-@shadow.Elements.Ice">@ConvertElementAffinityToShortHand(shadow.Elements.Ice)</td>
-                        <td class="text-align-center mobile-hidden affinity-@shadow.Elements.Electricity">@ConvertElementAffinityToShortHand(shadow.Elements.Electricity)</td>
-                        <td class="text-align-center mobile-hidden affinity-@shadow.Elements.Wind">@ConvertElementAffinityToShortHand(shadow.Elements.Wind)</td>
-                        <td class="text-align-center mobile-hidden affinity-@shadow.Elements.Light">@ConvertElementAffinityToShortHand(shadow.Elements.Light)</td>
-                        <td class="text-align-center mobile-hidden affinity-@shadow.Elements.Darkness">@ConvertElementAffinityToShortHand(shadow.Elements.Darkness)</td>
+                        <td class="text-align-center mobile-hidden font-bold affinity-@shadow.Elements.Physical">@ConvertElementAffinityToShortHand(shadow.Elements.Physical)</td>
+                        <td class="text-align-center mobile-hidden font-bold affinity-@shadow.Elements.Fire">@ConvertElementAffinityToShortHand(shadow.Elements.Fire)</td>
+                        <td class="text-align-center mobile-hidden font-bold affinity-@shadow.Elements.Ice">@ConvertElementAffinityToShortHand(shadow.Elements.Ice)</td>
+                        <td class="text-align-center mobile-hidden font-bold affinity-@shadow.Elements.Electricity">@ConvertElementAffinityToShortHand(shadow.Elements.Electricity)</td>
+                        <td class="text-align-center mobile-hidden font-bold affinity-@shadow.Elements.Wind">@ConvertElementAffinityToShortHand(shadow.Elements.Wind)</td>
+                        <td class="text-align-center mobile-hidden font-bold affinity-@shadow.Elements.Light">@ConvertElementAffinityToShortHand(shadow.Elements.Light)</td>
+                        <td class="text-align-center mobile-hidden font-bold affinity-@shadow.Elements.Darkness">@ConvertElementAffinityToShortHand(shadow.Elements.Darkness)</td>
                     </tr>
                 }
             </tbody>
