--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/site-dark.css" rel="stylesheet" />
 </head>
 <body>
     <div id="page-header">
