Add a light theme

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
@@ -19,7 +19,7 @@
                         <th class="col-md-4">Answer</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="alterate-row-colour">
                     @foreach (var answer in answers)
                     {
                         <tr>
