--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
@@ -12,7 +12,7 @@
             <th>Link(s)</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="alterate-row-colour">
         <tr>
             <td>Personas</td>
             <td>
