--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
@@ -9,7 +9,7 @@
                 <th class="slim-column text-align-center">Method</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="alterate-row-colour">
             @foreach (var lunch in Model.Lunches)
             {
                 <tr>
