--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
@@ -15,7 +15,7 @@
                 <th>Instructions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="alterate-row-colour">
             @foreach (var quest in Model.Quests)
             {
                 <tr>
