--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
@@ -22,7 +22,7 @@
                 <th class="extra-slim-column text-align-center mobile-hidden"><img src="~/img/Dark.png" alt="Dark" /></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="alterate-row-colour">
             @foreach (var persona in Model.Personas)
             {
                 <tr>
@@ -44,7 +44,7 @@
                 </tr>
 
             }
-        </tbody>
+        </tbodycolor:>
     </table>
     <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
