--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
@@ -100,7 +100,7 @@
                     <th>Effect</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="alterate-row-colour">
                 @for (int i = 0; i < shadow.Skills.Count(); i++)
                 {
                     <tr>
