--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site-dark.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site-dark.css
@@ -13,7 +13,7 @@
         background: #555;
     }
 
-/* text selected */
+/* selected text */
 ::selection {
     background-color: #c5c1b9;
     color: #e7e7e7;
@@ -73,6 +73,10 @@ table {
     color: #c5c1b9;
 }
 
+    a:link:hover {
+        filter: brightness(150%);
+    }
+
 .text-error {
     color: red;
 }
@@ -84,56 +88,4 @@ table {
 /* Colour the button styled elements, used on the 'See More' text for persona recipes */
 .button {
     background-color: #2a2a2a;
-}
-
-/* Persona types */
-.type-ultimate {
-    color: #4b75b3;
-}
-
-.type-new-game {
-    color: #b30000;
-}
-
-/* Shadow types */
-.type-normal {
-    color: #16ce3c;
-}
-
-.type-miniboss {
-    color: #ffd700;
-}
-
-.type-boss {
-    color: #b30000;
-}
-
-/* Skill cost */
-.cost-sp {
-    color: #e8b819;
-}
-
-.cost-hp {
-    color: #f71df0;
-}
-
-/* Persona / Shadow element affinities */
-.affinity-weak {
-    color: red;
-}
-
-.affinity-resistant {
-    color: #9a10b5;
-}
-
-.affinity-null {
-    color: dodgerblue;
-}
-
-.affinity-reflect {
-    color: #ffd700;
-}
-
-.affinity-absorb {
-    color: #16ce3c;
 }
