--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">Accessories</h2>
-    <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+    <table class="alterate-tbody-colour col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
                 <th>Name</th>
