--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
@@ -11,7 +11,7 @@
                 <th class="mobile-hidden">Effect</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="alterate-row-colour">
             @foreach (var book in Model.Books)
             {
                 <tr>
@@ -30,12 +30,14 @@
     <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">Book Order</h2>
     <h4 class="text-align-center col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">This is the order of the books in the inventory, to make it easier to see which books you are missing.</h4>
     <table class="col-md-2 col-md-offset-5 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
-        @foreach (var bookOrder in Model.BookOrder)
-        {
-            <tr>
-                <td class="text-align-center text-bright">@bookOrder.BookName</td>
-            </tr>
-        }
+        <tbody class="alterate-row-colour">
+            @foreach (var bookOrder in Model.BookOrder)
+            {
+                <tr>
+                    <td class="text-align-center text-bright">@bookOrder.BookName</td>
+                </tr>
+            }
+        </tbody>
     </table>
     <h3 class="no-results text-error text-align-center col-md-12 col-sm-12 col-xs-12" hidden>No results</h3>
 </div>
