Darken images in light theme

--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site-light.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site-light.css
@@ -31,6 +31,10 @@ input[type=text] {
         box-shadow: 0 0 3px #999;
     }
 
+img {
+    filter: brightness(25%);
+}
+
 /* Site wide default table colour styling */
 table {
     border: 1px solid #ddd;
